pca-svm/k8s-gateway/gateway-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-backend
  template:
    metadata:
      labels:
        app: gateway-backend
    spec:
      containers:
      - name: gateway-backend
        image: giovannilopopolo98/pca-svm-gateway:v4
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
