pca-svm/k8s-gateway/ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: gateway.pca-svm.local
    http:
      paths:
      - path: /upload(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway-backend
            port:
              number: 80
